rolled back z-index "fix" on program editor... it regressed the dragging and dropping

--- a/css/hml.css
+++ b/css/hml.css
@@ -32,8 +32,6 @@ li.active .tabButtons {
     margin-left: 20px;
     
     overflow-y: auto;
-    
-    z-index: -100;
 }
 
 #directions h1 {
